[package]
name = "epic"  # cs_epic for publishing.
version = "1.0.0" # 1.0.0 = 3.3.2
authors = ["Epic Foundation <epiccash@brickabode.com>", "Likho", "sneurlax"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
readme = "README.md"
exclude = ["**/*.epic", "**/*.epic2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = [
    "api",
    "chain",
    "config",
    "core",
    "keychain",
    "p2p",
    "servers",
    "store",
    "util",
    "pool",
    "bugreport",
]
exclude = ["etc/gen_gen"]

[[bin]]
name = "epic"
path = "src/bin/epic.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
failure = "0.1"
failure_derive = "0.1"
reqwest = "0.11.11"

epic_api = { package = "cs_epic_api", path = "./api", version = "^1.0.0" }
epic_config = { package = "cs_epic_config", path = "./config", version = "^1.0.0" }
epic_core = { package = "cs_epic_core", path = "./core", version = "^1.0.1" }
epic_keychain = { package = "cs_epic_keychain", path = "./keychain", version = "^1.0.1" }
epic_p2p = { package = "cs_epic_p2p", path = "./p2p", version = "^1.0.2" }
epic_servers = { package = "cs_epic_servers", path = "./servers", version = "^1.0.1" }
epic_util = { package = "cs_epic_util", path = "./util", version = "^1.0.1" }
epic_chain = { package = "cs_epic_chain", path = "./chain", version = "^1.0.1" }

cursive = { version = "0.16", default-features = false, features = [
    "pancurses-backend",
] }

[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.1"
features = ["win32"]

[[test]]
name = "cucumber"
harness = false

[build-dependencies]
built = "0.3"

[dev-dependencies]
epic_store = { package = "cs_epic_store", path = "./store", version = "^1.0.1" }
cucumber_rust = { version = "^0.5.1", default-features = false }
