[package]
name = "cs_epic_chain"
version = "1.0.1" # 1.0.1 = 3.6.0
authors = ["Epic Foundation <epiccash@brickabode.com>", "Likho", "sneurlax"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic"
workspace = ".."
edition = "2021"

[dependencies]
bit-vec = "0.6"
bitflags = "1"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
croaring = "1.0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.31"
lru-cache = "0.1"
lazy_static = "1"
regex = "1"
bigint = "4.4.1"

epic_core = { package = "cs_epic_core", path = "../core", version = "1.0.1" }
epic_keychain = { package = "cs_epic_keychain", path = "../keychain", version = "1.0.1" }
epic_store = { package = "cs_epic_store", path = "../store", version = "1.0.1" }
epic_util = { package = "cs_epic_util", path = "../util", version = "1.0.1" }

[dev-dependencies]
env_logger = "0.5"
rand = "0.6"
