[package]
name = "cs_epic_chain"
version = "0.0.1"
authors = ["Epic Foundation <mimblewimble@lists.launchpad.net>", "Likho", "sneurlax"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
workspace = ".."
edition = "2018"

[dependencies]
bit-vec = "0.6"
bitflags = "1"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
# FIRME: In the long run we should fix the conflicts and use a recent version of croaring
# croaring = "0.4.5"
#croaring = { git = "https://github.com/EricShimizuKarbstein/croaring-rs.git", branch = "not-native-march", version = "0.3.10" }
croaring = "0.3.9"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.4"
lru-cache = "0.1"
lazy_static = "1"
regex = "1"
bigint = "4.4.1"

epic_core = { package = "cs_epic_core", path = "../core", version = "0.0.1" }
epic_keychain = { package = "cs_epic_keychain", path = "../keychain", version = "1.0.1" }
# May need to usel Likho's legacy package:
# keychain = { package = "stack_test_epic_keychain", path = "../keychain", version = "3.0.3" }
epic_store = { package = "cs_epic_store", path = "../store", version = "0.0.1" }
epic_util = { package = "cs_epic_util", path = "../util", version = "0.0.1" }

[dev-dependencies]
env_logger = "0.5"
rand = "0.6"
