[package]
name = "cs_epic_pool"
version = "1.0.2" # 1.0.2 = 3.6.0
authors = ["Epic Foundation <epiccash@brickabode.com>", "Likho", "sneurlax"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic"
workspace = '..'
edition = "2021"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.31"
failure = "0.1"
failure_derive = "0.1"

epic_core = { package = "cs_epic_core", path = "../core", version = "1.0.1" }
epic_keychain = { package = "cs_epic_keychain", path = "../keychain", version = "1.0.1" }
epic_store = { package = "cs_epic_store", path = "../store", version = "1.0.1" }
epic_util = { package = "cs_epic_util", path = "../util", version = "1.0.1" }

[dev-dependencies]
epic_chain = { package = "cs_epic_chain", path = "../chain", version = "1.0.1" }
