[package]
name = "cs_epic_store"
version = "1.0.0" # 1.0.0 = 3.3.2
authors = ["Epic Foundation <epiccash@brickabode.com>", "Likho", "sneurlax"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic"
workspace = ".."
edition = "2018"

[dependencies]
byteorder = "1"
# FIRME: In the long run we should fix the conflicts and use a recent version of croaring
# croaring = "0.4.5"
#croaring = { git = "https://github.com/EricShimizuKarbstein/croaring-rs.git", branch = "not-native-march", version = "0.3.10" }
croaring = "0.3.9"
env_logger = "0.5"
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.0.5"
serde = "1"
serde_derive = "1"
log = "0.4"

epic_core = { package = "cs_epic_core", path = "../core", version = "1.0.0" }
epic_util = { package = "cs_epic_util", path = "../util", version = "1.0.0" }

[dev-dependencies]
chrono = "0.4.4"
rand = "0.6"
filetime = "0.2"
